--- a/sdk-build-config-external.gradle
+++ b/sdk-build-config-external.gradle
@@ -38,11 +38,12 @@ afterEvaluate {
             // Creates a Maven publication called "release".
             release(MavenPublication) {
                 // Applies the component for the release build variant.
-//                from components.release
+                from components.release
 
                 // You can then customize attributes of the publication as shown below.
-//                groupId = 'com.github.JAD-FE-TEAM'
-                groupId = 'com.github.JAD-FE-TEAM.JADSDKAndroid'
+                groupId = 'com.github.JAD-FE-TEAM'
+//                groupId = 'com.github.JAD-FE-TEAM.JADSDKAndroid'
+//                groupId = 'com.github.JAD-FE-TEAM.JADSDKAndroid'
 //                artifactId = 'JADSDKAndroid'
                 artifactId = project.name
                 version = rootProject.ext.sdkVersionName
