--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 #android.overridePathCheck=true
 #android.enableUnitTestBinaryResources=false
-android.disableAutomaticComponentCreation=true
+#android.disableAutomaticComponentCreation=true
 
 
